# solrand

./: .gitignore  Anchor.example.toml  README.md  index.js  package-lock.json  package.json  run-test-validator-localnet.sh  run-test-validator.sh
app/: index.js  sessions.js  solrand.json  solrandhypn.json
programs/solrand/: Cargo.toml
programs/solrand/src/: lib.rs
programs/solrandhypn/: Cargo.toml
programs/solrandhypn/src/: lib.rs
programs/solreq/: Cargo.toml
programs/solreq/src/: lib.rs
tests/: solrand.ts  solrandhypn.ts
