[package]
name = "solrandhypn"
version = "0.1.6"
description = "A random number oracle for Solana created by Demox Labs, modified by HypnosisI2P"
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/nonlin-lin-chaos-order-etc-etal/solrandhypn"
keywords = ["blockchain", "solana", "random"]

[lib]
crate-type = ["cdylib", "lib"]
name = "solrandhypn"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
